--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <ul>
-                <li class="logo-item"><img src="./img/logoLosNadies.png" alt="Logo de Los Nadies" class="logo"></li>
+                <li class="logo-item"><img src="./media/logoG.png" alt="Logo de Lotus Care" class="logo"></li>
                 <li><a href="#">Top Ventas</a></li>
                 <li><a href="#">Productos</a></li>
                 <li><a href="#">Acerca de</a></li>
@@ -26,25 +26,28 @@
     </header>
    <main class="container">
         <section class="first-section">
-            <div class="title-container" ></div>
-                <div class="">
-                    <h1>??????</h1>
-                    <h2 class="">The beauty box you actually want</h2>
-                    <div class="">
-                        <p><strong>Every box, every time. Starting at $17/month.</strong></p>
-                    </div>
-                    <div class="">
-                        <p>Some beauty boxes send the products <em>they </em>want.</p><p><strong>With Birchbox, you’re in control.</strong></p>
+            <div class="title-container" >
+                <h1>Loto Care</h1>
+            </div>   
+                <div class="first-text-container">
+                    <div class="title-container"></div>
+                        <h2 class="">Lorem ipsum dolor sit amet consectetur <br>adipisicing elit. Ratione possimus
+                    </h2>
+                    <p>
+                        <strong>Every box, every time. Starting at $17/month.</strong>
+                    </p>
                     </div>
                     <div class="video-container">
                         <video muted id="parallax-video" loop>
-                            <source src="../../../f5/LosNadies/img/introLosNadies.mp4" type="video/mp4">
-                            <!-- Agrega más fuentes de video si es necesario -->
+                            <source src="./media/intro.mp4" type="video/mp4">
                             Tu navegador no admite videos HTML5.
                         </video>    
                     </div>
+                    <div class="right-text-container">
+                        <p>Some beauty boxes send the products <em>they </em>want.</p><p><strong>With Birchbox, you’re in control.</strong></p>
+                    </div>
                 </div>
-                </div>  
+            </div>  
             </div>
         </section>
         <section class="">
@@ -88,9 +91,9 @@
             </div>
         </section>
         <section class="">
-        <div class="container grid lg:grid-cols-2 lg:gap-x-5">
+        <div class="">
             <div class="">
-                <h2 class="text-4xl uppercase sm:text-5xl xl:text-6xl">
+                <h2 class="">
                     h2
                 </h2>
                 <div class="">
