--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LotoCare</title>
     <!--------------- OJO imagen pestaña (modificar) ------------------->
-    <link rel="shotcut icon" href="./media/E-slider-images/logopestaña.png">
+    <link rel="shotcut icon" href="./media/E-slider-images/logopestaña.png">
     <!------------------------------------------------------------------>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/lightslider.css">
