--- a/rutinadenoche.html
+++ b/rutinadenoche.html
@@ -5,12 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styledia.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Khand" />
+    <link rel="shotcut icon" href="./media/E-slider-images/logopestaña.png">
+    <script src="https://kit.fontawesome.com/60be6c00de.js" crossorigin="anonymous"></script>
     <title>Productos de noche</title>
 </head>
 <body>
   
     <header>
-    <p>cabecera</p>
+        <nav>
+            <div class="title-container">
+                <h1>LotoCare</h1>
+            </div>
+            <ul>
+                <li><img src="./media/logoG.png" alt="Logo de Lotus Care" class="logo"></li>
+                <li><a href="#">Top Ventas</a></li>
+                <li><a href="#">Productos</a></li>
+                <li><a href="#">Acerca de</a></li>
+            </ul>
+            <div class="icons-container">
+                <i class="fa-solid fa-magnifying-glass icons"></i>
+                <i class="fas fa-user icons"></i>
+                <i class="fa-solid fa-cart-shopping icons"></i>
+            </div>
+        </nav>
     </header>
     
         <h1 class="h1-day">
@@ -71,8 +88,25 @@
        
     </section>
 <div class="rectangle-2"></div>
-    <footer>
-          <p>pie de la pagina</p>
-    </footer>
+<footer>
+    <div class="left-div">
+      <h2>Contáctanos!</h2>
+      <h3>¿Lista para empezar?</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut gravida felis auctor, ultrices nunc id, aliquet nunc. Sed euismod, nisl a lacinia hendrerit, justo velit aliquam nunc, vitae ultricies velit ex in justo.</p>
+    </div>
+    <div class="right-div">
+        <div class="input-container">
+            <label for="email">Manténgase en contacto para ofertas, noticias y mucho más</label>
+            <input type="email" id="email" placeholder="    Ingrese su correo electrónico">
+            <button type="submit">Enviar</button>
+        </div>
+        <div class="social-media-icons">
+            <a href="#" class="social-icon"><i class="fab fa-facebook"></i></a>
+            <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+            <a href="#" class="social-icon"><i class="fa-brands fa-x-twitter"></i></a>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
