Carrito de compras

--- a/rutinadenoche.html
+++ b/rutinadenoche.html
@@ -18,9 +18,9 @@
             </div>
             <ul>
                 <li><img src="./media/logoG.png" alt="Logo de Lotus Care" class="logo"></li>
-                <li><a href="#">Top Ventas</a></li>
-                <li><a href="#">Productos</a></li>
-                <li><a href="#">Acerca de</a></li>
+                <li><a href="#">Productos de día</a></li>
+                <li><a href="#">Productos de noche</a></li>
+                <li><a href="#">Nosotros</a></li>
             </ul>
             <div class="icons-container">
                 <i class="fa-solid fa-magnifying-glass icons"></i>
