--- a/Carrito.html
+++ b/Carrito.html
@@ -7,96 +7,144 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Khand" />
     <script src="https://kit.fontawesome.com/83619e9da4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="Carrito.css" />
-    <title>Document</title>
+    <link rel="shotcut icon" href="./media/E-slider-images/logopestaña.png">
+    <script src="https://kit.fontawesome.com/60be6c00de.js" crossorigin="anonymous"></script>
+    <title>Carrito</title>
 </head>
 
 <body>
     <header>
-        <nav class="nav-bar">
+        <nav>
+            <div class="title-container">
+                <a href="index.html"><h1>LotoCare</h1></a>
+            </div>
             <ul>
-                <li></li>
+                <li><img src="./media/logoG.png" alt="Logo de Lotus Care" class="logo"></li>
+                <li><a href="rutinadedia.html">Productos de día</a></li>
+                <li><a href="rutinadenoche.html">Productos de noche</a></li>
+                <li><a href="#">Nosotros</a></li>
             </ul>
+            <div class="icons-container">
+                <i class="fa-solid fa-magnifying-glass icons"></i>
+                <i class="fas fa-user icons"></i>
+                <i class="fa-solid fa-cart-shopping icons"></i>
+            </div>
         </nav>
     </header>
     <main>
-        <section class="section-1">
+        <section class="section-carrito">
             <p>Carrito</p>
             <i class="fa-solid fa-cart-shopping" style="color: #006d77;"></i>
-            <hr class="hr-section-1" />
         </section>
-        <section>
-            <article>
-                <aside>
-                    <div>
+        <section class="section-productos">
+            <article class="article-productos">
+                <aside class="limpiador-dia">
+                    <div class="img-limpiador-dia">
                         <img src="./media/limpiador-nochev2.png" alt="limpiador de día" class="img-product-1" />
                     </div>
-                    <div>
-                        <p>Limpiador de día 7.95€</p>
-                        <p>Nuestro limpiador facial para el día se caracteriza por su suavidad con la piel, sin deslipidificar en exceso la piel. su combinación ideal de  aceites esenciales y extractos de plantas...</p>
-                        <label for="rango">Selecciona un valor:</label>
-<input type="number" id="rango" name="rango" min="0" max="100" step="1">
-<p>Valor seleccionado: <span id="valorSeleccionado">50</span></p>
+                    <div class="texto-limpiador-dia">
+                        <p id="texto-h1-limpiador-dia">Limpiador de día <span
+                                id="span-precio-limpiador-dia">7.95€</span></p>
+                        <p id="texto-p-limpiador-dia">Nuestro limpiador facial para el día se caracteriza por su
+                            suavidad con la piel, sin
+                            deslipidificar en exceso la piel. su combinación ideal de  aceites esenciales y extractos de
+                            plantas...</p>
+                        <div class="btn-cantidad-producto-dia">
+                            <p>&lt; 1 &gt;</p>
+                        </div>
                     </div>
-                    <div>
+                    <div class="i-limpiador-dia">
                         <i class="fa-sharp fa-solid fa-circle-xmark"></i>
                     </div>
                 </aside>
-                <aside>
-                    <div>
+                <aside class="limpiador-noche">
+                    <div class="img-limpiador-noche">
                         <img src="./media/crema-nochev2.png" alt="crema de noche" class="img-product-2" />
                     </div>
-                    <div>
-                        <p>Crema de noche 6,75€</p>
-                        <p>La joya de la corona: nuestra crema nutritiva  tecnológicamente más avanzada nutre profundamente la piel para ayudar a minimizar la aparición de líneas finas y arrugas...</p>
-                        <label for="rango">Selecciona un valor:</label>
-<input type="number" id="rango" name="rango" min="0" max="100" step="1">
-<p>Valor seleccionado: <span id="valorSeleccionado">50</span></p>
+                    <div class="texto-limpiador-noche">
+                        <p id="texto-h1-limpiador-noche">Crema de noche <span
+                                id="span-precio-limpiador-noche">6,75€</span></p>
+                        <p id="texto-p-limpiador-noche">La joya de la corona: nuestra crema nutritiva  tecnológicamente
+                            más avanzada nutre
+                            profundamente la piel para ayudar a minimizar la aparición de líneas finas y arrugas...</p>
+                        <div class="btn-cantidad-producto-noche">
+                            <p>&lt; 1 &gt;</p>
+                        </div>
                     </div>
-                    <div>
+                    <div class="i-limpiador-dia">
                         <i class="fa-sharp fa-solid fa-circle-xmark"></i>
                     </div>
                 </aside>
                 <aside>
-                    <form action="" method="post">
-                        <input type="text" placeholder="Código promocional" />
-                        <input type="submit" value="Añadir código" />
-                        <input type="radio">
-                        <label for="">Pago con tarjeta</label>
-                        <input type="radio">
-                        <label for="">Paypal</label>
-                        <input type="radio">
-                        <label for="">Transferencia bancaria</label>
+                    <form action="" method="post" class="form-codigo-promocional">
+                        <input type="text" placeholder="Código promocional" id="input-codigo-promocional" />
+                        <input type="submit" value="Añadir código" class="input-btn-codigo-promocional" />
                     </form>
-                    <figure>
-                        <img src="./media/metodosPago.png" alt="" id="img-payment-methods">
-                        <figcaption>Imagén de métodos de pago disponible</figcaption>
-                    </figure>
                 </aside>
             </article>
-            <hr />
-            <article>
-                <section>
-                    <h2>Total a pagar</h2>
-                    <p>Limpiador de día 7,95</p>
-                    <p>Crema de noche 6,75</p>
-                    <p>Transporte 2,00</p>
-                    <hr />
-                    <p>Total a pagar 16,70</p>
+            <hr id="hr-divisor" />
+
+            <article class="article-total-a-pagar">
+                <section id="section-total-a-pagar">
+                    <h2 id="total-a-pagar-h2">Total a pagar</h2>
+                    <p class="total-a-pagar-p">Limpiador de día <span class="total-a-pagar-precio">7,95</span></p>
+                    <p class="total-a-pagar-p">Crema de noche <span class="total-a-pagar-precio">6,75</span></p>
+                    <p class="total-a-pagar-p" id="total-pagar-transporte">Transporte <span
+                            class="total-a-pagar-precio">2,00</span></p>
+                    <p class="total-a-pagar-p">Total a pagar <span class="total-a-pagar-precio">16,70</span></p>
                 </section>
             </article>
+
+
         </section>
-        <hr />
-        <section>
+        <hr id="hr-divisor-2" />
+        <section class="section-payment-method">
             <article>
-                    <li>Paypal</li>
-                    <li>Transferencia Bancaria</li>
-                </ul>
-               
+                <form action="" class="form-payment-method">
+                    <div>
+                        <input type="radio" id="radio-btn1" name="grupo">
+                        <label for="">Pago con tarjeta</label>
+                        <figure>
+                            <img src="./media/metodosPago.png" alt="" id="img-payment-methods">
+                        </figure>
+                    </div>
+                    <div>
+                        <input type="radio" id="radio-btn2" name="grupo">
+                        <label>Paypal</label>
+                    </div>
+                    <div>
+                        <input type="radio" id="radio-btn3" name="grupo">
+                        <label>Transferencia Bancaria</label>
+                    </div>
+                    <input type="submit" value="Pagar" class="input-btn-codigo-promocional" id="input-payment-method" />
+
+                    </ul>
+                </form>
+
             </article>
         </section>
     </main>
     <footer>
-        <section></section>
+        <div class="left-div">
+            <h2>Contáctanos!</h2>
+            <h3>¿Lista para empezar?</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut gravida felis auctor, ultrices nunc id,
+                aliquet nunc. Sed euismod, nisl a lacinia hendrerit, justo velit aliquam nunc, vitae ultricies velit ex
+                in justo.</p>
+        </div>
+        <div class="right-div">
+            <div class="input-container">
+                <label for="email">Manténgase en contacto para ofertas, noticias y mucho más</label>
+                <input type="email" id="email" placeholder="    Ingrese su correo electrónico">
+                <button type="submit">Enviar</button>
+            </div>
+            <div class="social-media-icons">
+                <a href="#" class="social-icon"><i class="fab fa-facebook"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="social-icon"><i class="fa-brands fa-x-twitter"></i></a>
+            </div>
+        </div>
     </footer>
 </body>
 
