ultimo commit Lea

--- a/rutinadedia.html
+++ b/rutinadedia.html
@@ -19,9 +19,9 @@
             </div>
             <ul>
                 <li><img src="./media/logoG.png" alt="Logo de Lotus Care" class="logo"></li>
-                <li><a href="#">Productos de día</a></li>
-                <li><a href="#">Productos de noche</a></li>
-                <li><a href="#">Nosotros</a></li>
+                <li><a href="#">Rutina de día</a></li>
+                <li><a href="#">Rutina de noche</a></li>
+                <li><a href="aboutUs.html">Nosotros</a></li>
             </ul>
             <div class="icons-container">
                 <i class="fa-solid fa-magnifying-glass icons"></i>
