rutina de dia v2

--- a/rutinadedia.html
+++ b/rutinadedia.html
@@ -15,23 +15,26 @@
     <header>
         <nav>
             <div class="title-container">
-                <h1>LotoCare</h1>
+                <a href="index.html">
+                    <h1>LotoCare</h1>
+                </a>
             </div>
             <ul>
                 <li><img src="./media/logoG.png" alt="Logo de Lotus Care" class="logo"></li>
-                <li><a href="#">Productos de día</a></li>
-                <li><a href="#">Productos de noche</a></li>
-                <li><a href="#">Nosotros</a></li>
+                <li><a href="rutinadedia.html">Productos de día</a></li>
+                <li><a href="rutinadenoche.html">Productos de noche</a></li>
+                <li><a href="./aboutUs">Nosotros</a></li>
             </ul>
             <div class="icons-container">
                 <i class="fa-solid fa-magnifying-glass icons"></i>
                 <i class="fas fa-user icons"></i>
                 <i class="fa-solid fa-cart-shopping icons"></i>
             </div>
+            <div>
+                <i class="fa-solid fa-bars show"></i>
+            </div>
         </nav>
     </header>
-
-
 
 
     <h1 class="h1-day">
@@ -51,25 +54,25 @@
         </figure>
 
         <article class="text-day">
-            <p>Nuestro limpiador facial para el día se caracteriza por su suavidad con <br> la piel, sin deslipidificar
-                en exceso la piel. su combinación ideal de <br>aceites esenciales y extractos de plantas. Es adecuado
-                para todo tipo<br> de piel y es una excelente base para la aplicación de otros productos<br> de cuidado
+            <p>Nuestro limpiador facial para el día se caracteriza por su suavidad con  la piel, sin deslipidificar
+                en exceso la piel. su combinación ideal de aceites esenciales y extractos de plantas. Es adecuado
+                para todo tipo de piel y es una excelente base para la aplicación de otros productos de cuidado
                 facial, como cremas hidratantes y serums.</p>
         </article>
 
     </section>
 
-    <section class="section-a">
+    <section class="section-a section-b">
 
         <article class="text-day">
-            <p>Nuestro sérum en gel ligero 3 en 1 sintetiza AHA y vitamina C para ayudar a <br>suavizar, aclarar e
-                iluminar la piel en solo 10 días*. Formulado con potentes <br>ingredientes que trabajan juntos para
-                brindar numerosos beneficios en un solo <br>paso, este multitarea es el complemento perfecto para un
-                régimen sin<br> complicaciones. Una mezcla de 6% de ácido glicólico y 2% de ácido láctico ayuda a
-                <br>mejorar la textura y reducir el exceso de grasa, mientras que la vitamina C <br>estabilizada al 2%
-                ayuda a iluminar, fortalecer y proteger la piel. La niacinamida y <br>el ácido fítico equilibran la piel
-                y ayudan a minimizar la apariencia de los poros. <br>Ideal para todo tipo de pieles, incluidas las
-                sensibles. Fragancia y color natural.<br></p>
+            <p>Nuestro sérum en gel ligero 3 en 1 sintetiza AHA y vitamina C para ayudar a suavizar, aclarar e
+                iluminar la piel en solo 10 días*. Formulado con potentes ingredientes que trabajan juntos para
+                brindar numerosos beneficios en un solo paso, este multitarea es el complemento perfecto para un
+                régimen sin complicaciones. Una mezcla de 6% de ácido glicólico y 2% de ácido láctico ayuda a
+                mejorar la textura y reducir el exceso de grasa, mientras que la vitamina C estabilizada al 2%
+                ayuda a iluminar, fortalecer y proteger la piel. La niacinamida y el ácido fítico equilibran la piel
+                y ayudan a minimizar la apariencia de los poros. Ideal para todo tipo de pieles, incluidas las
+                sensibles. Fragancia y color natural.</p>
 
 
             <p class="info-a">
@@ -100,9 +103,9 @@
         </figure>
 
         <article class="text-day">
-            <p>Nuestro protector solar mineral ligero y resistente al agua está formulado <br>con SPF 30 (factor de
-                protección solar) para proteger la piel del <br>envejecimiento prematuro. Una fórmula de defensa
-                múltiple que <br>protege, ilumina e hidrata dejando la piel nutrida, cómoda y protegida.</p>
+            <p>Nuestro protector solar mineral ligero y resistente al agua está formulado con SPF 30 (factor de
+                protección solar) para proteger la piel del envejecimiento prematuro. Una fórmula de defensa
+                múltiple que protege, ilumina e hidrata dejando la piel nutrida, cómoda y protegida.</p>
 
         </article>
 
