v3 con links las paginas

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -21,10 +21,10 @@
             </a>
         </div>
         <ul>
-            <li><img src="./media/logoG.png" alt="Logo de Lotus Care" class="logo"></li>
-            <li><a href="rutinadedia.html">Rutina de día</a></li>
-            <li><a href="rutinadenoche.html">Rutina de noche</a></li>
-            <li><a href="aboutUs.html">Nosotros</a></li>
+          <li> <a href="index.html"><img src="./media/logoG.png" alt="Logo de Lotus Care" class="logo"></a></li>
+          <li><a href="./rutinadedia.html">Productos de día</a></li>
+          <li><a href="./rutinadenoche.html">Productos de noche</a></li>
+          <li><a href="./aboutUs.html">Nosotros</a></li>
         </ul>
         <div class="icons-container">
             <i class="fa-solid fa-magnifying-glass icons"></i>
