--- a/rutinadenoche.html
+++ b/rutinadenoche.html
@@ -19,10 +19,10 @@
                 </a>
             </div>
             <ul>
-                <li><img src="./media/logoG.png" alt="Logo de Lotus Care" class="logo"></li>
-                <li><a href="rutinadedia.html">Productos de día</a></li>
-                <li><a href="rutinadenoche.html">Productos de noche</a></li>
-                <li><a href="./aboutUs">Nosotros</a></li>
+                <li> <a href="index.html"><img src="./media/logoG.png" alt="Logo de Lotus Care" class="logo"></a></li>
+                <li><a href="./rutinadedia.html">Productos de día</a></li>
+                <li><a href="./rutinadenoche.html">Productos de noche</a></li>
+                <li><a href="./aboutUs.html">Nosotros</a></li>
             </ul>
             <div class="icons-container">
                 <i class="fa-solid fa-magnifying-glass icons"></i>
