--- a/rutinadedia.html
+++ b/rutinadedia.html
@@ -28,7 +28,7 @@
             <div class="icons-container">
                 <i class="fa-solid fa-magnifying-glass icons"></i>
                 <i class="fas fa-user icons"></i>
-                <i class="fa-solid fa-cart-shopping icons"></i>
+               <a href="./Carrito.html"> <i class="fa-solid fa-cart-shopping icons"></i></a>
             </div>
             <div>
                 <i class="fa-solid fa-bars show"></i>
