Adding Miracle's upgrades

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <li class="item-a">
                     <div class="slide-container">
                         <div class="slide-img">
-                            <img src="./media/pruebaSlide.webp" alt="1">
+                            <img src="./media/Cosmeticos logo + nombre/protector-diav2.png" alt="1">
                             <div class="overlay">
                                 <a href="#" class="buy-btn">Comprar Ahora</a>
                             </div>
