--- a/index.html
+++ b/index.html
@@ -22,16 +22,15 @@
                 <h1>LotoCare</h1>
             </div>
             <ul>
-                <li> <a href="index.html"><img src="./media/logoG.png" alt="Logo de Lotus Care" class="logo"></a></li>
-                <li><a href="./rutinadedia.html">Productos de día</a></li>
-                <li><a href="./rutinadenoche.html">Productos de noche</a></li>
-                <li><a href="./aboutUs.html">Nosotros</a></li>
+                <li><img src="./media/logoG.png" alt="Logo de Lotus Care" class="logo"></li>
+                <li><a href="#">Top Ventas</a></li>
+                <li><a href="#">Productos</a></li>
+                <li><a href="#">Acerca de</a></li>
             </ul>
             <div class="icons-container">
                 <i class="fa-solid fa-magnifying-glass icons"></i>
                 <i class="fas fa-user icons"></i>
-                <a href="./Carrito.html"> <i class="fa-solid fa-cart-shopping icons"></i></a>
-
+                <i class="fa-solid fa-cart-shopping icons"></i>
             </div>
         </nav>
     </header>
@@ -65,7 +64,7 @@
                 <li class="item-a">
                     <div class="slide-container">
                         <div class="slide-img">
-                            <img src="./media/Cosmeticos logo + nombre/protector-diav2.png" alt="1">
+                            <img src="./media/pruebaSlide.webp" alt="1">
                             <div class="overlay">
                                 <a href="#" class="buy-btn">Comprar Ahora</a>
                             </div>
