Adding links navbar

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                 <h1>LotoCare</h1>
             </div>
             <ul>
-                <li><img src="./media/logoG.png" alt="Logo de Lotus Care" class="logo"></li>
-                <li><a href="#">Top Ventas</a></li>
-                <li><a href="#">Productos</a></li>
-                <li><a href="#">Acerca de</a></li>
+                <li> <a href="index.html"><img src="./media/logoG.png" alt="Logo de Lotus Care" class="logo"></a></li>
+                <li><a href="./rutinadedia.html">Productos de día</a></li>
+                <li><a href="./rutinadenoche.html">Productos de noche</a></li>
+                <li><a href="./aboutUs.html">Nosotros</a></li>
             </ul>
             <div class="icons-container">
                 <i class="fa-solid fa-magnifying-glass icons"></i>
@@ -33,6 +33,9 @@
                 <i class="fa-solid fa-cart-shopping icons"></i>
             </div>
         </nav>
+        <div>
+            <i class="fa-solid fa-bars show"></i>
+        </div>
     </header>
    <main class="container">
         <section class="first-section">
