Fixing landing page animation

--- a/index.html
+++ b/index.html
@@ -67,136 +67,136 @@
                 <li class="item-a">
                     <div class="slide-container">
                         <div class="slide-img">
-                            <img src="./media/pruebaSlide.webp" alt="1">
+                            <img src="./media/SliderImg/limpiadorDia.png" alt="1">
                             <div class="overlay">
                                 <a href="#" class="buy-btn">Comprar Ahora</a>
                             </div>
                         </div>
                         <div class="detail-box">
                             <div class="type">
-                                <a href="#">Crema Hemorroides</a>
-                                <span>Cremameste</span>
+                                <a href="#">Limpiador Día</a>
+                                <span>Loto Care</span>
                             </div>
-                            <a href="#" class="price">$23</a> 
+                            <a href="#" class="price">€23</a> 
                         </div>
                     </div> 
                 </li>
                 <li class="item-b">
                     <div class="slide-container">
                         <div class="slide-img">
-                            <img src="./media/pruebaSlide.webp" alt="1">
+                            <img src="./media/SliderImg/protectorDia.png" alt="1">
                             <div class="overlay">
                                 <a href="#" class="buy-btn">Comprar Ahora</a>
                             </div>
                         </div>
                         <div class="detail-box">
                             <div class="type">
-                                <a href="#">Crema Hemorroides</a>
-                                <span>Cremameste</span>
+                                <a href="#">Protector Día</a>
+                                <span>Loto Care</span>
                             </div>
-                            <a href="#" class="price">$23</a> 
+                            <a href="#" class="price">€22</a> 
                         </div>
                     </div> 
                 </li>
                 <li class="item-c">
                     <div class="slide-container">
                         <div class="slide-img">
-                            <img src="./media/pruebaSlide.webp" alt="1">
+                            <img src="./media/SliderImg/serumDia.png" alt="1">
                             <div class="overlay">
-                                <a href="#" class="buy-btn">Comprar Ahora</a>
+                                <a href="#" class="buy-btn">Serum Día</a>
                             </div>
                         </div>
                         <div class="detail-box">
                             <div class="type">
-                                <a href="#">Crema Hemorroides</a>
-                                <span>Cremameste</span>
+                                <a href="#">Serum Día</a>
+                                <span>Loto Care</span>
                             </div>
-                            <a href="#" class="price">$23</a> 
+                            <a href="#" class="price">€20</a> 
                         </div>
                     </div> 
                 </li>
                 <li class="item-d">
                     <div class="slide-container">
                         <div class="slide-img">
-                            <img src="./media/pruebaSlide.webp" alt="1">
+                            <img src="./media/SliderImg/limpiadorNoche.png" alt="1">
                             <div class="overlay">
                                 <a href="#" class="buy-btn">Comprar Ahora</a>
                             </div>
                         </div>
                         <div class="detail-box">
                             <div class="type">
-                                <a href="#">Crema Hemorroides</a>
-                                <span>Cremameste</span>
+                                <a href="#">Limpiador Noche</a>
+                                <span>Loto Care</span>
                             </div>
-                            <a href="#" class="price">$23</a> 
+                            <a href="#" class="price">€20</a> 
                         </div>
                     </div> 
                 </li>
                 <li class="item-e">
                     <div class="slide-container">
                         <div class="slide-img">
-                            <img src="./media/pruebaSlide.webp" alt="1">
+                            <img src="./media/SliderImg/cremaNoche.png" alt="1">
                             <div class="overlay">
                                 <a href="#" class="buy-btn">Comprar Ahora</a>
                             </div>
                         </div>
                         <div class="detail-box">
                             <div class="type">
-                                <a href="#">Crema Hemorroides</a>
-                                <span>Cremameste</span>
+                                <a href="#">Crema Noche</a>
+                                <span>Loto Care</span>
                             </div>
-                            <a href="#" class="price">$23</a> 
+                            <a href="#" class="price">€18</a> 
                         </div>
                     </div> 
                 </li>
                 <li class="item-f">
                     <div class="slide-container">
                         <div class="slide-img">
-                            <img src="./media/pruebaSlide.webp" alt="1">
+                            <img src="./media/SliderImg/serumNoche.png" alt="1">
                             <div class="overlay">
                                 <a href="#" class="buy-btn">Comprar Ahora</a>
                             </div>
                         </div>
                         <div class="detail-box">
                             <div class="type">
-                                <a href="#">Crema Hemorroides</a>
-                                <span>Cremameste</span>
+                                <a href="#">Serum Noche</a>
+                                <span>Loto Care</span>
                             </div>
-                            <a href="#" class="price">$23</a> 
+                            <a href="#" class="price">€18</a> 
                         </div>
                     </div> 
                 </li>
                 <li class="item-g">
                     <div class="slide-container">
                         <div class="slide-img">
-                            <img src="./media/pruebaSlide.webp" alt="1">
+                            <img src="./media/SliderImg/limpiadorDia.png" alt="1">
                             <div class="overlay">
                                 <a href="#" class="buy-btn">Comprar Ahora</a>
                             </div>
                         </div>
                         <div class="detail-box">
                             <div class="type">
-                                <a href="#">Crema Hemorroides</a>
-                                <span>Cremameste</span>
+                                <a href="#">Limpiador Día</a>
+                                <span>Loto Care</span>
                             </div>
-                            <a href="#" class="price">$23</a> 
+                            <a href="#" class="price">€23</a> 
                         </div>
                     </div> 
                 </li>
                 <li class="item-h">
                     <div class="slide-container">
                         <div class="slide-img">
-                            <img src="./media/pruebaSlide.webp" alt="1">
+                            <img src="./media/SliderImg/protectorDia.png" alt="1">
                             <div class="overlay">
                                 <a href="#" class="buy-btn">Comprar Ahora</a>
                             </div>
                         </div>
                         <div class="detail-box">
                             <div class="type">
-                                <a href="#">Crema Hemorroides</a>
-                                <span>Cremameste</span>
+                                <a href="#">Protector Día</a>
+                                <span>Loto Care</span>
                             </div>
-                            <a href="#" class="price">$23</a> 
+                            <a href="#" class="price">€22</a> 
                         </div>
                     </div> 
                 </li>
@@ -205,7 +205,7 @@
         <section class="second-section">
             <div class="image-container">
                 <div class="hover-content">
-                <img src="./media/E-slider-images/3.jpg" alt="Imagen" class="hover-image">
+                <img src="./media/SliderImg/serumDia.png" alt="Imagen" class="hover-image">
                 <div class="hover-text">
                     <h2 class="right-description-title">Dale a tu piel una rutina diaria!</h2>
                     <p class="right-description">Simplifica tu régimen de cuidado de la piel.<br>Con nuestros productos hechos pensando en la piel sensible,<br> nuestros limpiadores y humectantes suaves pero efectivos <br> son la fórmula para una piel sana + equilibrada.<br>LotoCare es un cuidado de la piel sin complicaciones.<br>Siempre ha sido un concepto de menos es más<br>con unenfoque en lo que es esencial para el uso diario.<br>Esta base está entretejida en todo lo que hacemos<br>y lo ha sido desde el primer día.<br>Siempre somosconscientes de eliminar ingredientes,<br>empaques ypasos innecesarios en su régimen</p>
@@ -215,7 +215,7 @@
         <section class="third-section">
             <div class="left-image-container">
               <div class="left-hover-content">
-                <img src="./media/E-slider-images/3.jpg" alt="Imagen" class="left-hover-image">
+                <img src="./media/SliderImg/serumNoche.png" alt="Imagen" class="left-hover-image">
                 <div class="left-hover-text">
                     <h2 class="left-description-title">Con LotoCare los ácidos son tus amigos</h2>
                     <p class="left-description">Desde hace bastante tiempo, los ácidos han desempeñado<br>un papel principal en el juego del cuidado de la piel,<br> apareciendo en todo, desde las exfoliaciones químicas<br>profesionales realizadas en los consultorios<br>de los dermatólogos hasta los tratamientos específicos para el acné<br>que se encuentran en los estantes de las farmacias e incluso en los humectantes más simples.<br>Si bien están cargados de nombres algo intimidantes,<br>se ha demostrado clínicamente que los ácidos tienen una amplia gama<br> de beneficios para todo tipo de piel, especialmente cuando se formulan y usan adecuadamente.</p>
